--- a/grabcoffee.css
+++ b/grabcoffee.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
 html, body {
     font-family: 'Open Sans', sans-serif;
-
 }
